# AgentCare

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a499ac2dc68b_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  heuristics.py  llm.py  prompts.py  runner.py  schemas.py  state.py
backend/app/agents/nodes/: __init__.py  _common.py  appointment.py  coordinator.py  document.py  followup.py  routing.py  safety.py
backend/app/api/: deps.py  errors.py
backend/app/api/routes/: auth.py  departments.py  patients.py  staff.py  workflows.py
backend/app/core/: config.py  db.py  security.py
backend/app/db/: init_db.py  seed.py  seed_workflows.py
backend/app/models/: __init__.py  appointment.py  audit.py  catalog.py  document.py  enums.py  mixins.py  notification.py  reminder.py  types.py  user.py  workflow.py
backend/app/schemas/: auth.py  catalog.py  clinical.py
backend/app/services/: analytics.py  reports.py
backend/app/tools/: __init__.py  appointment_booking.py  audit_tool.py  base.py  department_lookup.py  document_tools.py  escalation.py  patient_record.py  reminder_notification.py  slot_availability.py
backend/tests/: conftest.py  test_auth_rbac.py  test_reports_analytics.py  test_safety.py  test_tools.py  test_workflow_e2e.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  (+1 more)
(+35 files in other folders)
