[project]
name = "agentcare-backend"
version = "1.0.0"
description = "AgentCare — Agentic AI for patient administration and care coordination"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Erick K. Yegon" }]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "sse-starlette==2.1.3",
    "SQLAlchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "email-validator==2.2.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "langgraph==0.2.60",
    "langgraph-checkpoint-sqlite==2.0.1",
    "langchain-core==0.3.28",
    "langchain-anthropic==0.3.1",
    "anthropic==0.42.0",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "httpx==0.28.1", "ruff==0.8.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
